# htmlt

./: .dir-locals.el  .envrc-ghcjs  .gitignore  .gitmodules  .stylish-haskell.yaml  8.10.7.nix  8.6.0.nix  9.6.5.nix  9.7.2.nix  Clickable.hs  LICENSE  README.md  cabal.project  clickable.cabal  default.nix  hie.yaml  htmlt.cabal  htmlt.hs  massaraksh.cabal  package.json  package.yaml  screenlog.0  shell.nix  stack.yaml  tsconfig.json  wasm.hs  webpack.config.js  websocket.hs
Clickable/: Element.hs  Float.hs  Html.hs  Internal.hs  Property.hs  Types.hs  Wasm.hs  WebSocket.hs
benchmarks/: benchmarks.hs
examples/: .ghci-dev  cabal.project  examples.cabal  hello.hs  htmlt-examples.cabal  massaraksh-examples.cabal  package.yaml  shell.nix  todo.hs
examples/Massaraksh/: Component.hs
examples/Massaraksh/Html/: Exists.hs
examples/Todo/: Item.hs  Todos.hs  Utils.hs
examples/TodoMVC/: Item.hs  Main.hs  Todos.hs  Utils.hs
examples/charts/: App.hs  Charts.hs  PairSelector.hs  charts.hs  dev-server.hs  dev.hs
examples/counter/: counter.hs
examples/dyn/: Main.hs  massaraksh-dyn.cabal
examples/either/: Main.hs  massaraksh-either.cabal
examples/hello/: hello.hs
examples/hello-world/: .ghci  .ghci-dev  Main.hs  massaraksh-helloworld.cabal
examples/simple/: Main.hs
examples/simple-routing/: Assets.hs  Pages.hs  Router.hs  Utils.hs  index.html  prism.externs  prism.min.js  simple-routing.hs
examples/todo/: TodoItem.hs  TodoList.hs  Utils.hs  todo.hs
examples/todomvc/: App.hs  Component.hs  Item.hs  JsMain.hs  Main.hs  TodoItem.hs  TodoList.hs  Todos.hs  Utils.hs  dev.hs  massaraksh-todomvc.cabal  todomvc.hs  wasm.hs
examples/todomvc/Massaraksh/: Component.hs
examples/todomvc/TodoMVC/: Item.hs  Main.hs  Todos.hs  Utils.hs
jsbits/: #wasm.ts#  #websocket.ts#  binary.ts  dev.ts  devserver.ts  ffi.ts  index.js  jsffi.js  lib.ts  post-link.mjs  prelude.js  proto.ts  protocol.ts  wasm.ts  websocket.ts
src/: Clickable.hs  HtmlT.hs  Massaraksh.hs  Sketch.hs
src-ssr/Massaraksh/DOM/: Impl.hs
src/Clickable/: Core.hs  DOM.hs  Element.hs  FFI.hs  Internal.hs  Main.hs  Property.hs  Protocol.hs  Types.hs
src/Clickable/Main/: Dev.hs  DevServer.hs  WASM.hs  Wasm.hs
src/Clickable/Protocol/: Value.hs
src/HtmlT/: Base.hs  DOM.hs  Decode.hs  Element.hs  Event.hs  HashMap.hs  IdSupply.hs  Internal.hs  Main.hs  Property.hs  Sketch.hs  Types.hs
src/HtmlT/Sketch/: FFI.hs
src/JavaScript/Compat/: Marshal.hs  Prim.hs  String.hs
src/JavaScript/Compat/Foreign/: Callback.hs
src/JavaScript/Compat/String/: JavaScript.hs  Native.hs
src/Massaraksh/: Base.hs  Core.hs  DOM.hs  Decode.hs  Decoder.hs  Dynamic.hs  Element.hs  Event.hs  Example.hs  Html.hs  IdSupply.hs  Internal.hs  Lens.hs  Main.hs  Property.hs  Store.hs  Text.hs  Types.hs  UI.hs
src/Massaraksh/Base/: Text.hs
src/Massaraksh/DOM/: Decoders.hs  Text.hs
src/Massaraksh/Decode/: Internal.hs
src/Massaraksh/Element/: Text.hs
src/Massaraksh/Html/: Attribute.hs  Attrs.hs  Base.hs  Core.hs  Decoder.hs  Dynamic.hs  Element.hs
src/Massaraksh/Html/Attribute/: Dynamic.hs
src/Massaraksh/Html/Attrs/: Dynamic.hs
src/Massaraksh/Html/Core/: Dynamic.hs
src/Sketch/: FFI.hs
src/Wasm/Compat/: Marshal.hs  Prim.hs
