cabal-version: 3.4

name:                htmlt
version:             0.1.0.0
homepage:            https://github.com/lagunoff/htmlt
license:             BSD-3-Clause
author:              Vladislav Lagunov
maintainer:          vlad.lagunoff@gmail.com
copyright:           2019 Vladislav Lagunov
category:            Web
build-type:          Simple
extra-source-files:
  README.md

Flag production
  default: True
  description: Add optimisations

Flag examples
  default: False
  description: Build examples

Flag benchmarks
  default: False
  description: Build benchmarks

common htmlt-common
  ghc-options:
    -Wall -Wno-missing-signatures -Wno-name-shadowing -Wno-unused-matches
    -Wno-unused-do-bind
  if flag(production)
    ghc-options: -O3
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImplicitParams
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library
  import: htmlt-common         
  ghc-options:
    -Wall -Wno-missing-signatures -Wno-name-shadowing -Wno-unused-matches
    -Wno-unused-do-bind
  hs-source-dirs: src ./examples/charts ./examples/todomvc
  exposed-modules:
    Clickable
    Clickable.Core
    Clickable.DOM
    Clickable.Element
    Clickable.Property
    Clickable.Main.Wasm
    Clickable.Types
    Clickable.Internal
    Clickable.Protocol
    Clickable.Protocol.Value
    Clickable.FFI
    Wasm.Compat.Prim
  other-modules: Paths_htmlt
  build-depends:
    base,
    binary,
    bytestring,
    containers,
    exceptions,
    mtl,
    text,
    transformers,
    ghc-experimental,
    ghc-prim,
  if !arch(wasm32)
    exposed-modules:
      Clickable.Main.Dev
    build-depends:
      async,
      foreign-store,
      http-types,
      wai,
      wai-app-static,
      wai-websockets,
      warp,
      websockets,
