cabal-version: 3.4

name:                htmlt
version:             0.1.0.0
homepage:            https://github.com/lagunoff/htmlt
license:             BSD-3-Clause
license-file:        LICENSE
author:              Vladislav Lagunov
maintainer:          vlad.lagunoff@gmail.com
copyright:           2019 Vladislav Lagunov
category:            Web
build-type:          Simple
extra-source-files:
  README.md

library
  ghc-options:
    -O3 -funbox-strict-fields -fstrictness
    -Wall -Wno-missing-signatures -Wno-name-shadowing -Wno-unused-matches
    -Wno-unused-do-bind
  hs-source-dirs: src
  exposed-modules:
    Clickable
    Clickable.Core
    Clickable.DOM
    Clickable.Element
    Clickable.Property
    Clickable.Main.Wasm
    Clickable.Types
    Clickable.Internal
    Clickable.Protocol
    Clickable.Protocol.Value
    Clickable.FFI
    Wasm.Compat.Prim
  other-modules: Paths_htmlt
  build-depends:
    base,
    binary,
    bytestring,
    containers,
    exceptions,
    mtl,
    text,
    transformers,
    ghc-experimental,
    ghc-prim,
  if !arch(wasm32)
    exposed-modules:
      Clickable.Main.Dev
    build-depends:
      async,
      foreign-store,
      http-types,
      wai,
      wai-app-static,
      wai-websockets,
      warp,
      websockets,
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DuplicateRecordFields
    FunctionalDependencies
    GHC2024
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    RecursiveDo
    TypeFamilies
    UndecidableInstances
