cabal-version: 1.12

name:                massaraksh
version:             0.1.0.0
homepage:            https://github.com/lagunoff/massaraksh
license:             BSD3
author:              Vladislav Lagunov
maintainer:          vlad.lagunoff@gmail.com
copyright:           2019 Vladislav Lagunov
category:            Web
build-type:          Simple
extra-source-files:
  README.md

Flag production
  default: True
  description: Adds optimisation

library
  exposed-modules:
    Massaraksh
    Massaraksh.Base
    Massaraksh.Base.Text
    Massaraksh.DOM
    Massaraksh.DOM.Text
    Massaraksh.Decode
    Massaraksh.Decode.Internal
    Massaraksh.Element
    Massaraksh.Element.Text
    Massaraksh.Event
    Massaraksh.Internal
    Massaraksh.Main
    Massaraksh.Text
    Massaraksh.Types

  other-modules: Paths_massaraksh
  hs-source-dirs: src
  ghc-options:
    -Wall -Wno-missing-signatures -Wno-name-shadowing
    -Wno-unused-matches -Wno-unused-do-bind
  build-depends:
    base,
    bytestring,
    containers,
    jsaddle,
    lens,
    mtl,
    natural-transformation,
    text,
    transformers,
--    raw-strings-qq, generic-lens, data-default,
    unliftio-core

  if impl(ghcjs)
    build-depends: ghcjs-base, ghcjs-prim
    if flag(production)
      ghc-options: -dedupe -O2
  else
    build-depends: jsaddle-warp

  default-extensions:
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    IncoherentInstances
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns
        
  default-language: Haskell2010
