cabal-version: 1.12

name:           massaraksh-examples
version:        0.1.0.0
category:       Web
homepage:       https://github.com/lagunoff/massaraksh
author:         Vladislav Lagunov
maintainer:     vlad.lagunov@gmail.com
copyright:      2019 Vladislav Lagunov
license:        BSD3
build-type:     Simple

executable massaraksh-helloworld
  main-is: Main.hs
  hs-source-dirs: hello-world
  ghc-options: -Wall -Wno-missing-signatures -Wno-name-shadowing -Wno-unused-matches -Wno-unused-do-bind -O0
  build-depends:
    base >=4.7 && <5,
    bytestring,
    jsaddle,
    massaraksh,
    mtl,
    raw-strings-qq,
    text

  if impl(ghcjs)
    ghc-options: -dedupe
    build-depends: ghcjs-base
  else
    build-depends: jsaddle-warp
  default-language: Haskell2010

  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

executable massaraksh-todomvc
  main-is: Main.hs
  hs-source-dirs: todomvc
  ghc-options: -Wall -Wno-missing-signatures -Wno-name-shadowing -Wno-unused-matches -Wno-unused-do-bind -O0
  build-depends:
    base >=4.7 && <5,
    bytestring,
    data-default,
    jsaddle,
    lens,
    massaraksh,
    mtl,
    natural-transformation,
    raw-strings-qq,
    text,
    transformers,
    unliftio-core

  if impl(ghcjs)
    ghc-options: -dedupe
    build-depends: ghcjs-base
  else
    build-depends: jsaddle-warp
  default-language: Haskell2010

  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
